--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     </div>
                     <p class="lead mb-5">Hands-on department head and director with extensive experience in a cleanroom laboratory environment, web designer, IT professional, and a coffee enthusiast. </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/corey-silate/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/csilate"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" target=”_blank” href="https://www.linkedin.com/in/corey-silate/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" target=”_blank” href="https://github.com/csilate"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
