--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Security-First, Layered Approach Devleopment
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Cross Browser Testing & Debugging
                         </li>
                         <li>
@@ -152,8 +156,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Aside from managin laboratories and making websites, I love drinking unhealthy amounts of coffee. I'm also big into video games, and am working on making my own Zelda-like game in Unity for fun.</p>
-                    <p class="mb-0">I also am a huge believer in local bussinesses, and small "hole-in-the-wall" places. If I'm not coding, playing with my cat, or playing games, I'm probably walking around a thrift store or checking out small shops and food trucks. I'm always down for hiking, going for a walk somewhere, or just going to a park and relaxing</p>
+                    <p>Aside from managing laboratories and making websites, I am a (self-titled) coffee connoisseur. I am <i>always</i> down to grab a coffee! I'm also big into video games, and am working on making my own Zelda-like game in Unity for fun.</p>
+                    <p class="mb-0">I also am a huge believer in local bussinesses, and small "hole-in-the-wall" places. If I'm not coding, playing with my cat, or playing games, I'm probably walking around a thrift store or checking out small shops and food trucks. I'm always down for hiking, going for a walk somewhere, or just going to a park and relaxing.</p>
                 </div>
             </section>
             <hr class="m-0" />
