made it extra blue, changed it to dark mode

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2016 - October 2017</span></div>
                     </div>
-                    <i style="color: #bd5d38">More work history available upon request.</i>
+                    <i style="color:var(--blue)">More work history available upon request.</i>
                 </div>
             </section>
             <hr class="m-0" />
