fixed a word's spelling

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Assisstant Laboratory Manager</h3>
+                            <h3 class="mb-0">Assistant Laboratory Manager</h3>
                             <div class="subheading mb-3">Walker Trading Co.</div>
                             <p>Oversaw all employees and production in a cleanroom laboratory, responsible for all laboratory staff's safety and adherence to local and federal laws, took charge of FDA Compliance taskforce.</p>
                         </div>
